compiler/src/abnf.txt
expr        := atom / list

list        := "(" ws (expr (ws expr)*)? ws ")"

atom        := symbol / number / string

symbol      := ALPHA *(ALPHA / DIGIT / "-" / "_")

number      := 1*DIGIT

string      := DQUOTE *(%x20-21 / %x23-7E) DQUOTE

ws          := *(SP / HTAB / CR / LF)

ALPHA       := %x41-5A / %x61-7A     ; A-Z / a-z

DIGIT       := %x30-39               ; 0-9

SP          := %x20

HTAB        := %x09

CR          := %x0D

LF          := %x0A

DQUOTE      := %x22
